--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -22,4 +22,32 @@
 .logo {
   font-size: 18px;
   text-transform: uppercase;
+  font-weight: lighter;
+  color: aquamarine;
+  padding-left: 20px;
 }
+
+.sub-header {
+  margin: 0;
+  padding: 10px 50px;
+  display: flex;
+  list-style: none;
+  font-size: 18px;
+}
+
+.btn {
+  background-color: inherit;
+  padding: 10px 28px;
+  font-size: 16px;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: normal;
+}
+.btn:hover {
+  background: #eee;
+}
+
+/* .btn a:hover,
+.btn a:active {
+  color: #40a4c8;
+} */
