--- a/src/Containers/Men/MenPage.css
+++ b/src/Containers/Men/MenPage.css
@@ -1,10 +1,18 @@
 .all-cards {
+  /* margin: 100px 200px; */
+  /* flex-wrap: wrap; */
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
+  padding-top: 30px;
+  padding-left: 80px;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 375px) {
   .all-cards {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
   }
 }
