--- a/src/Components/Header/NavItem.css
+++ b/src/Components/Header/NavItem.css
@@ -1,5 +1,6 @@
 .nav-item {
-  margin: 10px 0;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
   display: block;
   width: 100%;
@@ -12,30 +13,26 @@
   display: block;
 }
 
-.nav-item a:hover,
-.nav-item a:active,
-.nav-item a:active {
-  color: #2e3b3f;
-}
-
 @media (min-width: 500px) {
   .nav-item {
-    margin: 0;
     display: flex;
     width: 100%;
     align-items: center;
   }
+
+  .nav-item:hover {
+    background-color: #40a4c8b6;
+    border-radius: 10px;
+  }
   .nav-item a {
     /* height: 100%; */
+    padding: 5px 30px;
     font-size: 18px;
-    padding: 15px 30px;
-    border-bottom: 4px solid transparent;
+    font-family: "Raleway", sans-serif;
   }
   .nav-item a:hover,
   .nav-item a:active,
   .nav-item a:active {
-    background-color: #40a4c8b6;
-    border-bottom: 4px solid #e14515;
-    color: white;
+    color: aquamarine;
   }
 }
